--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   youtube_explode_dart: ^1.10.8
   google_fonts: ^2.1.0
+  flutter_ffmpeg: ^0.4.2
 
 dev_dependencies:
   flutter_test:
