--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.5
   permission_handler: ^8.2.2
   flutter_riverpod: ^0.14.0+3
+  path: ^1.8.0
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
