--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   path: ^1.8.0
   uuid: ^3.0.5
+  sentry_flutter: ^6.0.1
 
 dev_dependencies:
   flutter_test:
