--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.flutterFFmpegPackage  = 'full'
+    // ext.flutterFFmpegPackage  = 'full'
 
     repositories {
         google()
